fix: overflow GSAP

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,10 @@
   font-family: var(--fontPrimary);
 }
 
+body {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth !important;
 }
